--- a/src/global.css
+++ b/src/global.css
@@ -51,3 +51,22 @@ form input {
     background-color: rgb(255, 255, 255);
     color: #e02041;
 }
+
+.back-link {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    color: #41414d;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: 0.2s;
+}
+
+.logon-container section.form a:hover {
+    opacity: 0.8;
+}
+
+.logon-container section.form a svg {
+    margin-left: 8px;
+}
