--- a/src/global.css
+++ b/src/global.css
@@ -44,7 +44,7 @@ form textarea {
 
 .button {
     width: 100%;
-    height: 60px;
+    height: auto;
     background: #e02041;
     border: 0;
     border-radius: 8px;
